<resources>
    <string name="app_name">Hostel Manager</string>
    <string name="register_student">REGISTER STUDENT</string>
    <string name="check_rooms">Check Rooms</string>
    <string name="password">Password**</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="login_here"><u>Login here.</u></string>
    <string name="nav_open">OPEN</string>
    <string name="nav_close">CLOSE</string>
    <string name="room_type">Room Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="important_notice">Important Notice</string>
    <string name="no_rooms_found_for_this_floor">No rooms found for this floor.</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="id">ID</string>
    <string name="save">Save</string>
</resources>