<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:backgroundTint="#40121212"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounds"
        android:backgroundTint="#40FFFFFF"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:shadowColor="@color/teal_200"
        android:shadowRadius="10"
        android:text="Hello USER123!"
        android:textColor="#F2F2F2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/noticeView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#80F2F2F2"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="25dp"
        android:paddingStart="50dp"
        android:paddingEnd="10dp"
        android:shadowColor="#121212"
        android:shadowRadius="10"
        android:text="Allotted room is 9999. "
        android:textAlignment="textStart"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/feeOverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#80F2F2F2"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeView2"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/feeOverhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#80F2F2F2"
            android:drawableStart="@drawable/payment_icon"
            android:drawablePadding="5dp"
            android:drawableTint="#121212"
            android:drawableTintMode="multiply"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="25dp"
            android:shadowColor="@color/teal_200"
            android:shadowRadius="10"
            android:text="Fees OverView"
            android:textAllCaps="true"
            android:textColor="#121212"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:ignore="HardcodedText,UseCompatTextViewDrawableXml" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/bankInfo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fontFamily="sans-serif"
            android:isScrollContainer="true"
            android:padding="5dp"
            android:text="default"
            android:textAlignment="textStart"
            android:textColor="#121212"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/paymentDateView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:backgroundTint="#80F2F2F2"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="payment_date"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#121212"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/paymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#121212"
            android:shadowColor="#448AFF"
            android:shadowRadius="25"
            android:text="Pay fees"
            android:textColor="#F2F2F2"
            app:cornerRadius="10dp"
            app:icon="@drawable/payment_icon"
            app:iconGravity="textStart"
            app:iconTint="#F2F2F2"
            app:rippleColor="@color/teal_200"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/profileTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_rounds"
        android:backgroundTint="#121212"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_top"
                android:backgroundTint="@color/teal_200"
                android:padding="10dp"
                android:text="ID"
                android:textAlignment="textEnd"
                android:textColor="#121212"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/studentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:ems="7"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:text="@string/id"
                android:textColor="@color/teal_200"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/teal_200"
                android:padding="10dp"
                android:text="Name"
                android:textAlignment="textEnd"
                android:textColor="#121212"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/studentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:ems="7"
                android:enabled="true"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:text="Name"
                android:textColor="@color/teal_200"
                tools:ignore="HardcodedText,LabelFor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#03D9C4"
                android:padding="10dp"
                android:text="Contact"
                android:textAlignment="textEnd"
                android:textColor="#121212"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:ems="7"
                android:enabled="true"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:text="Contact"
                android:textColor="@color/teal_200"
                tools:ignore="HardcodedText,LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bottom"
                android:backgroundTint="@color/teal_200"
                android:padding="10dp"
                android:text="Fee Status"
                android:textAlignment="textEnd"
                android:textColor="#121212"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/feeStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:ems="7"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="text|textCapWords"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:text="Unpaid"
                android:textColor="@color/teal_200"
                tools:ignore="HardcodedText,LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/saveProfile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="#121212"
                android:shadowRadius="10"
                android:text="@string/save"
                android:textAlignment="gravity"
                android:textColor="#f2f2f2"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:cornerRadius="100dp"
                app:icon="@android:drawable/ic_menu_save"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="18dp"
                app:iconTint="#F2F2F2"
                app:iconTintMode="src_atop"
                app:rippleColor="#F2F2F2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#B00020"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="#F2F2F2"
                android:shadowRadius="25"
                android:text="@string/logout"
                android:textAlignment="gravity"
                android:textColor="#f2f2f2"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:cornerRadius="100dp"
                app:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:iconGravity="textStart"
                app:iconPadding="2dp"
                app:iconSize="16dp"
                app:iconTint="#F2F2F2"
                app:iconTintMode="src_atop"
                app:rippleColor="#121212" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blur_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#BFFFFFFF"
            android:gravity="center"
            android:minWidth="500dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33121212"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:padding="25dp"
                    android:text="@string/important_notice"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/close_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/app_name"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                    app:tint="@color/black" />
            </TableRow>

            <TextView
                android:id="@+id/noticeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:padding="25dp"
                android:text="Hey USER123,\n Your assigned room is 9999. "
                android:textColor="@color/black"
                android:textSize="20sp"
                app:autoSizeTextType="uniform"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>